--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,8 +2,62 @@
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 
 body {
-  background-color: antiquewhite;
-  color: brown;
+  background-image: url('../../popcorn.jpg');;
+  margin: 5%;
   text-align: center;
-  margin-top: 100px;
+  display: inline;
+}
+
+#app {
+  display: flex;
+  flex-direction: column;
+}
+
+#eat {
+  border: 5px black solid;
+  background-color: white;
+  width: 20%;
+  height: 20%;
+  margin-right: 20%;
+  margin-left: 3%;
+  margin-bottom: 3%;
+  text-align: center;
+}
+
+#play {
+  border: 5px black solid;
+  background-color: white;
+  width: 20%;
+  height: 20%;
+  margin-right: 20%;
+  margin-left: 3%;
+  margin-bottom: 3%;
+  text-align: center;
+}
+
+#fight {
+  border: 5px black solid;
+  background-color: white;
+  width: 20%;
+  height: 20%;
+  margin-right: 20%;
+  margin-left: 3%;
+  margin-bottom: 3%;
+  text-align: center;
+}
+
+#sleep {
+  border: 5px black solid;
+  background-color: white;
+  width: 20%;
+  height: 20%;
+  margin-right: 20%;
+  margin-left: 3%;
+  text-align: center;
+}
+
+.button-group {
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 1%;
 }
